tests/toylang/pos/000020_cdrc2.toylang
program a = { a = a + a + 0; } .
