tests/toylang/neg/000413_mutation.toylang
program a = { a =) a == a; } .
